--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <p>ff<p> 
+  <p>Added this for update to website.<p> 
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thee Life of Jensen Kokou </title>
+    <title>The Life of Jensen Kokou </title>
     <style>
         body {
             font-family: Arial, sans-serif;
